# eopi

./: CMakeLists.txt  LICENSE
src/: tst.cpp
src/Primitive_Types/: ComputeXDividedByY.cpp  ComputeXxYWithoutArithmeticalOperators.cpp  ComputingTheParityOfAWord.cpp  FindAClosestIntegerWithTheSameWeight.cpp  ReverseBits.cpp  SwapBits.cpp
